jEdit 5.6 version history
       (changes since jEdit 5.5.0)
:encoding=UTF-8:

{{{ Version 5.6pre1

Thanks to Björn "Vampire" Kautler, Matthieu Casanova, Hrotkó Gábor,
Alan Ezust, and Dale Anson for contributing to this release.

{{{ Bug Fixes

- Fixed a NPE when trying to choose a non existing icon when adding a
  toolbar item (#3770 - Matthieu Casanova)

- When launching jEdit if a file named like the untitled buffer from
  perspective exists, then load it (#4087 - Matthieu Casanova)

- Do not only highlight the first match in hypersearch results
  (#4083 - Matthieu Casanova)

- Re-add missing help viewer back and forward icons (Björn "Vampire" Kautler)

- Fix wrong behavior of input method framework support that returned wrong
  locations for offsets and wrong offsets for locations
  (#4082 - Björn "Vampire" Kautler)

- Upgrade OS X launcher stub to be compatible with newer Java versions
  (#4077 - Björn "Vampire" Kautler)

- Fix Untitled Issue with -background command line option
  (Patch #617 - Hrotkó Gábor)

- Handle case where user has not set either a backup prefix or suffix
  (#4069 - Dale Anson)

- Fix odd default colors for style editor (#4055 - Dale Anson)

- Fix NullPointerException in Preview Javadoc macro (#2412 - Dale Anson)

- Fix dockable buttons not wrapping correctly (#2626 - Dale Anson)

- Fix electric scroll not working with page up/down (#2719 - Dale Anson)

- Correct location of context menu popup (#4073 - Dale Anson)

- Fix file browser splitter buttons not working (#4081 - Dale Anson)

}}}
{{{ Miscellaneous

- New EditPaneManager, with convenient methods to get and iterate over
  EditPanes, get it by calling jEdit.getEditPaneManager() (Matthieu Casanova)

- New BufferManager, all you need to get loaded buffers from jEdit
  get it by calling jEdit.getBufferManager() (Matthieu Casanova)

- New ViewManager, all you need to get loaded existing views
  get it by calling jEdit.getViewManager() (Matthieu Casanova)
