@@ -1,0 +1,31 @@
+/*
+ * Debug_BufferSets.bsh - a BeanShell macro script to debug bufferSets
+ *
+ * Copyright (C) 2020 Matthieu Casanova
+ *
+ * This program is free software; you can redistribute it and/or
+ * modify it under the terms of the GNU General Public License
+ * as published by the Free Software Foundation; either version 2
+ * of the License, or any later version.
+ *
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with the jEdit program; if not, write to the Free Software
+ * Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
+ */
+
+java.lang.reflect.Field screenLineMgr = DisplayManager.class.getDeclaredField("screenLineMgr");
+screenLineMgr.setAccessible(true);
+java.lang.reflect.Field screenLinesField = ScreenLineManager.class.getDeclaredField("screenLines");
+screenLinesField.setAccessible(true);
+Object screenLineManager = screenLineMgr.get(textArea.getDisplayManager());
+char[] screenLines = (char[]) screenLinesField.get(screenLineManager);
+for (int i = 0; i < buffer.getLineCount(); i++)
+{
+	int screenLine = (int) screenLines[i];
+	Log.log(Log.NOTICE, jEdit.class, "screenLine " + i + "->" + screenLine);
+}
